compilador.output
Terminals unused in grammar

   PARA
   REPITA
   ATE


Rules useless in parser due to conflicts

   96 condicao_senao: /* empty */


State 58 conflicts: 1 shift/reduce, 1 reduce/reduce
State 70 conflicts: 1 reduce/reduce
State 71 conflicts: 1 reduce/reduce
State 72 conflicts: 1 reduce/reduce
State 73 conflicts: 1 reduce/reduce
State 74 conflicts: 1 reduce/reduce
State 75 conflicts: 1 reduce/reduce
State 122 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 sem_tipo: IDENT

    4 bloco: parte_declara_vars comando_composto

    5 parte_declara_vars: var

    6 $@2: /* empty */

    7 var: VAR $@2 declara_vars parte_declara_vars

    8 $@3: /* empty */

    9 var: ROTULO $@3 lista_id_var PONTO_E_VIRGULA parte_declara_vars
   10    | /* empty */

   11 declara_vars: declara_vars declara_var
   12             | declara_var

   13 $@4: /* empty */

   14 $@5: /* empty */

   15 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   16 tipo: IDENT

   17 tipo_parametro: IDENT

   18 tipo_retorno_func: IDENT

   19 lista_id_var: lista_id_var VIRGULA IDENT
   20             | IDENT

   21 lista_idents: lista_idents VIRGULA IDENT
   22             | IDENT

   23 $@6: /* empty */

   24 $@7: /* empty */

   25 comando_composto: $@6 procedimento_ou_funcao $@7 bloco
   26                 | comando_composto_2

   27 $@8: /* empty */

   28 procedimento_ou_funcao: PROCEDIMENTO IDENT $@8 procedimento_ou_funcao_2 PONTO_E_VIRGULA procedimento_ou_funcao_3

   29 $@9: /* empty */

   30 procedimento_ou_funcao: FUNCAO IDENT $@9 procedimento_ou_funcao_2 DOIS_PONTOS tipo_retorno_func PONTO_E_VIRGULA procedimento_ou_funcao_3

   31 procedimento_ou_funcao_2: ABRE_PARENTESES parametros_vars_proc_ou_func FECHA_PARENTESES
   32                         | /* empty */

   33 $@10: /* empty */

   34 procedimento_ou_funcao_3: $@10 bloco PONTO_E_VIRGULA

   35 $@11: /* empty */

   36 parametros_vars_proc_ou_func: $@11 vars_proc_ou_func
   37                             | /* empty */

   38 $@12: /* empty */

   39 vars_proc_ou_func: VAR $@12 vars_proc_ou_func_2

   40 $@13: /* empty */

   41 vars_proc_ou_func: $@13 vars_proc_ou_func_2

   42 vars_proc_ou_func_2: var_proc_ou_func PONTO_E_VIRGULA vars_proc_ou_func
   43                    | var_proc_ou_func

   44 $@14: /* empty */

   45 var_proc_ou_func: $@14 lista_id_var_proc_ou_func DOIS_PONTOS tipo_parametro

   46 lista_id_var_proc_ou_func: lista_id_var_proc_ou_func VIRGULA IDENT
   47                          | IDENT

   48 comando_composto_2: T_BEGIN comandos T_END

   49 comandos: atrib_proc_func_rotu PONTO_E_VIRGULA comandos
   50         | repeticao PONTO_E_VIRGULA comandos
   51         | condicao PONTO_E_VIRGULA comandos
   52         | leitura PONTO_E_VIRGULA comandos
   53         | impressao PONTO_E_VIRGULA comandos
   54         | goto PONTO_E_VIRGULA comandos
   55         | atrib_proc_func_rotu PONTO_E_VIRGULA
   56         | repeticao PONTO_E_VIRGULA
   57         | condicao PONTO_E_VIRGULA
   58         | leitura PONTO_E_VIRGULA
   59         | impressao PONTO_E_VIRGULA
   60         | goto PONTO_E_VIRGULA
   61         | /* empty */

   62 comando_sem_ponto_e_virgula: atrib_proc_func_rotu
   63                            | repeticao
   64                            | condicao
   65                            | leitura
   66                            | impressao
   67                            | goto

   68 $@15: /* empty */

   69 atrib_proc_func_rotu: IDENT $@15 atrib_proc_func_rotu_2

   70 atrib_proc_func_rotu_2: rotulo_para_goto
   71                       | atribuicao

   72 $@16: /* empty */

   73 atrib_proc_func_rotu_2: $@16 var_chama_proc_func

   74 $@17: /* empty */

   75 rotulo_para_goto: DOIS_PONTOS $@17 comando_sem_ponto_e_virgula

   76 $@18: /* empty */

   77 atribuicao: ATRIBUICAO $@18 expressao_aritmetica

   78 $@19: /* empty */

   79 repeticao: ENQUANTO $@19 repeticao_2

   80 $@20: /* empty */

   81 repeticao_2: ABRE_PARENTESES expressao_booleana_geral FECHA_PARENTESES FACA $@20 repeticao_3

   82 $@21: /* empty */

   83 repeticao_2: expressao_booleana_geral FACA $@21 repeticao_3

   84 repeticao_3: comando_sem_ponto_e_virgula
   85            | comando_composto_2

   86 condicao: SE condicao_se_entao
   87         | SE condicao_se_entao condicao_senao

   88 $@22: /* empty */

   89 condicao_se_entao: ABRE_PARENTESES expressao_booleana_geral FECHA_PARENTESES ENTAO $@22 condicao_se_entao_2

   90 $@23: /* empty */

   91 condicao_se_entao: expressao_booleana_geral ENTAO $@23 condicao_se_entao_2

   92 condicao_se_entao_2: comando_sem_ponto_e_virgula
   93                    | comando_composto_2

   94 $@24: /* empty */

   95 condicao_senao: SENAO $@24 condicao_senao_2
   96               | /* empty */

   97 condicao_senao_2: comando_sem_ponto_e_virgula
   98                 | comando_composto_2

   99 leitura: LEITURA IDENT
  100        | LEITURA passagem

  101 impressao: IMPRESSAO IDENT
  102          | IMPRESSAO passagem

  103 goto: VAI_PARA IDENT

  104 expressao_aritmetica: expressao_aritmetica SOMA expressao_termo
  105                     | expressao_aritmetica SUBTRACAO expressao_termo
  106                     | expressao_termo

  107 expressao_termo: expressao_termo MULTIPLICACAO expressao_fator
  108                | expressao_termo DIVISAO expressao_fator
  109                | expressao_fator

  110 $@25: /* empty */

  111 expressao_fator: IDENT $@25 var_chama_proc_func
  112                | NUMERO
  113                | ABRE_PARENTESES expressao_aritmetica FECHA_PARENTESES

  114 expressao_booleana_geral: expressao_booleana
  115                         | NAO expressao_booleana

  116 expressao_booleana: expressao_booleana IGUAL expressao_fator2
  117                   | expressao_booleana DIFERENTE expressao_fator2
  118                   | expressao_booleana MAIOR expressao_fator2
  119                   | expressao_booleana MAIOR IGUAL expressao_fator2
  120                   | expressao_booleana MENOR expressao_fator2
  121                   | expressao_booleana MENOR IGUAL expressao_fator2
  122                   | expressao_booleana E expressao_fator2
  123                   | expressao_booleana OU expressao_fator2
  124                   | expressao_booleana E NAO expressao_fator2
  125                   | expressao_fator2

  126 expressao_fator2: IDENT
  127                 | NUMERO
  128                 | ABRE_PARENTESES expressao_booleana_geral FECHA_PARENTESES

  129 $@26: /* empty */

  130 var_chama_proc_func: $@26 passagem

  131 $@27: /* empty */

  132 $@28: /* empty */

  133 passagem: ABRE_PARENTESES $@27 lista_id_var_parametro FECHA_PARENTESES $@28 var_chama_proc_func_2
  134         | var_chama_proc_func_2

  135 var_chama_proc_func_2: /* empty */

  136 $@29: /* empty */

  137 lista_id_var_parametro: lista_id_var_parametro VIRGULA $@29 expressao_aritmetica

  138 $@30: /* empty */

  139 lista_id_var_parametro: $@30 expressao_aritmetica
  140                       | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 31 81 89 113 128 133
FECHA_PARENTESES (260) 2 31 81 89 113 128 133
VIRGULA (261) 19 21 46 137
PONTO_E_VIRGULA (262) 2 9 15 28 30 34 42 49 50 51 52 53 54 55 56 57
    58 59 60
DOIS_PONTOS (263) 15 30 45 75
PONTO (264) 2
T_BEGIN (265) 48
T_END (266) 48
VAR (267) 7 39
IDENT (268) 3 16 17 18 19 20 21 22 28 30 46 47 69 99 101 103 111 126
ATRIBUICAO (269) 77
NUMERO (270) 112 127
SOMA (271) 104
SUBTRACAO (272) 105
MULTIPLICACAO (273) 107
DIVISAO (274) 108
IGUAL (275) 116 119 121
DIFERENTE (276) 117
MAIOR (277) 118 119
MENOR (278) 120 121
NAO (279) 115 124
E (280) 122 124
OU (281) 123
ENQUANTO (282) 79
PARA (283)
FACA (284) 81 83
REPITA (285)
ATE (286)
SE (287) 86 87
ENTAO (288) 89 91
SENAO (289) 95
PROCEDIMENTO (290) 28
FUNCAO (291) 30
LEITURA (292) 99 100
IMPRESSAO (293) 101 102
ROTULO (294) 9
VAI_PARA (295) 103
LOWER_THEN_ELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 2, on right: 0
$@1 (44)
    on left: 1, on right: 2
sem_tipo (45)
    on left: 3, on right: 2
bloco (46)
    on left: 4, on right: 2 25 34
parte_declara_vars (47)
    on left: 5, on right: 4 7 9
var (48)
    on left: 7 9 10, on right: 5
$@2 (49)
    on left: 6, on right: 7
$@3 (50)
    on left: 8, on right: 9
declara_vars (51)
    on left: 11 12, on right: 7 11
declara_var (52)
    on left: 15, on right: 11 12
$@4 (53)
    on left: 13, on right: 15
$@5 (54)
    on left: 14, on right: 15
tipo (55)
    on left: 16, on right: 15
tipo_parametro (56)
    on left: 17, on right: 45
tipo_retorno_func (57)
    on left: 18, on right: 30
lista_id_var (58)
    on left: 19 20, on right: 9 15 19
lista_idents (59)
    on left: 21 22, on right: 2 21
comando_composto (60)
    on left: 25 26, on right: 4
$@6 (61)
    on left: 23, on right: 25
$@7 (62)
    on left: 24, on right: 25
procedimento_ou_funcao (63)
    on left: 28 30, on right: 25
$@8 (64)
    on left: 27, on right: 28
$@9 (65)
    on left: 29, on right: 30
procedimento_ou_funcao_2 (66)
    on left: 31 32, on right: 28 30
procedimento_ou_funcao_3 (67)
    on left: 34, on right: 28 30
$@10 (68)
    on left: 33, on right: 34
parametros_vars_proc_ou_func (69)
    on left: 36 37, on right: 31
$@11 (70)
    on left: 35, on right: 36
vars_proc_ou_func (71)
    on left: 39 41, on right: 36 42
$@12 (72)
    on left: 38, on right: 39
$@13 (73)
    on left: 40, on right: 41
vars_proc_ou_func_2 (74)
    on left: 42 43, on right: 39 41
var_proc_ou_func (75)
    on left: 45, on right: 42 43
$@14 (76)
    on left: 44, on right: 45
lista_id_var_proc_ou_func (77)
    on left: 46 47, on right: 45 46
comando_composto_2 (78)
    on left: 48, on right: 26 85 93 98
comandos (79)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61, on right: 48 49
    50 51 52 53 54
comando_sem_ponto_e_virgula (80)
    on left: 62 63 64 65 66 67, on right: 75 84 92 97
atrib_proc_func_rotu (81)
    on left: 69, on right: 49 55 62
$@15 (82)
    on left: 68, on right: 69
atrib_proc_func_rotu_2 (83)
    on left: 70 71 73, on right: 69
$@16 (84)
    on left: 72, on right: 73
rotulo_para_goto (85)
    on left: 75, on right: 70
$@17 (86)
    on left: 74, on right: 75
atribuicao (87)
    on left: 77, on right: 71
$@18 (88)
    on left: 76, on right: 77
repeticao (89)
    on left: 79, on right: 50 56 63
$@19 (90)
    on left: 78, on right: 79
repeticao_2 (91)
    on left: 81 83, on right: 79
$@20 (92)
    on left: 80, on right: 81
$@21 (93)
    on left: 82, on right: 83
repeticao_3 (94)
    on left: 84 85, on right: 81 83
condicao (95)
    on left: 86 87, on right: 51 57 64
condicao_se_entao (96)
    on left: 89 91, on right: 86 87
$@22 (97)
    on left: 88, on right: 89
$@23 (98)
    on left: 90, on right: 91
condicao_se_entao_2 (99)
    on left: 92 93, on right: 89 91
condicao_senao (100)
    on left: 95 96, on right: 87
$@24 (101)
    on left: 94, on right: 95
condicao_senao_2 (102)
    on left: 97 98, on right: 95
leitura (103)
    on left: 99 100, on right: 52 58 65
impressao (104)
    on left: 101 102, on right: 53 59 66
goto (105)
    on left: 103, on right: 54 60 67
expressao_aritmetica (106)
    on left: 104 105 106, on right: 77 104 105 113 137 139
expressao_termo (107)
    on left: 107 108 109, on right: 104 105 106 107 108
expressao_fator (108)
    on left: 111 112 113, on right: 107 108 109
$@25 (109)
    on left: 110, on right: 111
expressao_booleana_geral (110)
    on left: 114 115, on right: 81 83 89 91 128
expressao_booleana (111)
    on left: 116 117 118 119 120 121 122 123 124 125, on right: 114
    115 116 117 118 119 120 121 122 123 124
expressao_fator2 (112)
    on left: 126 127 128, on right: 116 117 118 119 120 121 122 123
    124 125
var_chama_proc_func (113)
    on left: 130, on right: 73 111
$@26 (114)
    on left: 129, on right: 130
passagem (115)
    on left: 133 134, on right: 100 102 130
$@27 (116)
    on left: 131, on right: 133
$@28 (117)
    on left: 132, on right: 133
var_chama_proc_func_2 (118)
    on left: 135, on right: 133 134
lista_id_var_parametro (119)
    on left: 137 139 140, on right: 133 137
$@29 (120)
    on left: 136, on right: 137
$@30 (121)
    on left: 138, on right: 139


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: $@1 . PROGRAM sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    2 programa: $@1 PROGRAM . sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5

    sem_tipo  go to state 6


state 5

    3 sem_tipo: IDENT .

    $default  reduce using rule 3 (sem_tipo)


state 6

    2 programa: $@1 PROGRAM sem_tipo . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 7


state 7

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 8

    lista_idents  go to state 9


state 8

   22 lista_idents: IDENT .

    $default  reduce using rule 22 (lista_idents)


state 9

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   21 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 10
    VIRGULA           shift, and go to state 11


state 10

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


state 11

   21 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  shift, and go to state 13


state 12

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    VAR     shift, and go to state 14
    ROTULO  shift, and go to state 15

    $default  reduce using rule 10 (var)

    bloco               go to state 16
    parte_declara_vars  go to state 17
    var                 go to state 18


state 13

   21 lista_idents: lista_idents VIRGULA IDENT .

    $default  reduce using rule 21 (lista_idents)


state 14

    7 var: VAR . $@2 declara_vars parte_declara_vars

    $default  reduce using rule 6 ($@2)

    $@2  go to state 19


state 15

    9 var: ROTULO . $@3 lista_id_var PONTO_E_VIRGULA parte_declara_vars

    $default  reduce using rule 8 ($@3)

    $@3  go to state 20


state 16

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  shift, and go to state 21


state 17

    4 bloco: parte_declara_vars . comando_composto

    T_BEGIN  shift, and go to state 22

    $default  reduce using rule 23 ($@6)

    comando_composto    go to state 23
    $@6                 go to state 24
    comando_composto_2  go to state 25


state 18

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


state 19

    7 var: VAR $@2 . declara_vars parte_declara_vars

    $default  reduce using rule 13 ($@4)

    declara_vars  go to state 26
    declara_var   go to state 27
    $@4           go to state 28


state 20

    9 var: ROTULO $@3 . lista_id_var PONTO_E_VIRGULA parte_declara_vars

    IDENT  shift, and go to state 29

    lista_id_var  go to state 30


state 21

    2 programa: $@1 PROGRAM sem_tipo ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $default  reduce using rule 2 (programa)


state 22

   48 comando_composto_2: T_BEGIN . comandos T_END

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    $default  reduce using rule 61 (comandos)

    comandos              go to state 37
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 23

    4 bloco: parte_declara_vars comando_composto .

    $default  reduce using rule 4 (bloco)


state 24

   25 comando_composto: $@6 . procedimento_ou_funcao $@7 bloco

    PROCEDIMENTO  shift, and go to state 44
    FUNCAO        shift, and go to state 45

    procedimento_ou_funcao  go to state 46


state 25

   26 comando_composto: comando_composto_2 .

    $default  reduce using rule 26 (comando_composto)


state 26

    7 var: VAR $@2 declara_vars . parte_declara_vars
   11 declara_vars: declara_vars . declara_var

    VAR     shift, and go to state 14
    ROTULO  shift, and go to state 15

    IDENT     reduce using rule 13 ($@4)
    $default  reduce using rule 10 (var)

    parte_declara_vars  go to state 47
    var                 go to state 18
    declara_var         go to state 48
    $@4                 go to state 28


state 27

   12 declara_vars: declara_var .

    $default  reduce using rule 12 (declara_vars)


state 28

   15 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 29

    lista_id_var  go to state 49


state 29

   20 lista_id_var: IDENT .

    $default  reduce using rule 20 (lista_id_var)


state 30

    9 var: ROTULO $@3 lista_id_var . PONTO_E_VIRGULA parte_declara_vars
   19 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA          shift, and go to state 50
    PONTO_E_VIRGULA  shift, and go to state 51


state 31

   69 atrib_proc_func_rotu: IDENT . $@15 atrib_proc_func_rotu_2

    $default  reduce using rule 68 ($@15)

    $@15  go to state 52


state 32

   79 repeticao: ENQUANTO . $@19 repeticao_2

    $default  reduce using rule 78 ($@19)

    $@19  go to state 53


state 33

   86 condicao: SE . condicao_se_entao
   87         | SE . condicao_se_entao condicao_senao

    ABRE_PARENTESES  shift, and go to state 54
    IDENT            shift, and go to state 55
    NUMERO           shift, and go to state 56
    NAO              shift, and go to state 57

    condicao_se_entao         go to state 58
    expressao_booleana_geral  go to state 59
    expressao_booleana        go to state 60
    expressao_fator2          go to state 61


state 34

   99 leitura: LEITURA . IDENT
  100        | LEITURA . passagem

    ABRE_PARENTESES  shift, and go to state 62
    IDENT            shift, and go to state 63

    $default  reduce using rule 135 (var_chama_proc_func_2)

    passagem               go to state 64
    var_chama_proc_func_2  go to state 65


state 35

  101 impressao: IMPRESSAO . IDENT
  102          | IMPRESSAO . passagem

    ABRE_PARENTESES  shift, and go to state 62
    IDENT            shift, and go to state 66

    $default  reduce using rule 135 (var_chama_proc_func_2)

    passagem               go to state 67
    var_chama_proc_func_2  go to state 65


state 36

  103 goto: VAI_PARA . IDENT

    IDENT  shift, and go to state 68


state 37

   48 comando_composto_2: T_BEGIN comandos . T_END

    T_END  shift, and go to state 69


state 38

   49 comandos: atrib_proc_func_rotu . PONTO_E_VIRGULA comandos
   55         | atrib_proc_func_rotu . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 70


state 39

   50 comandos: repeticao . PONTO_E_VIRGULA comandos
   56         | repeticao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 71


state 40

   51 comandos: condicao . PONTO_E_VIRGULA comandos
   57         | condicao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 72


state 41

   52 comandos: leitura . PONTO_E_VIRGULA comandos
   58         | leitura . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 73


state 42

   53 comandos: impressao . PONTO_E_VIRGULA comandos
   59         | impressao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 74


state 43

   54 comandos: goto . PONTO_E_VIRGULA comandos
   60         | goto . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 75


state 44

   28 procedimento_ou_funcao: PROCEDIMENTO . IDENT $@8 procedimento_ou_funcao_2 PONTO_E_VIRGULA procedimento_ou_funcao_3

    IDENT  shift, and go to state 76


state 45

   30 procedimento_ou_funcao: FUNCAO . IDENT $@9 procedimento_ou_funcao_2 DOIS_PONTOS tipo_retorno_func PONTO_E_VIRGULA procedimento_ou_funcao_3

    IDENT  shift, and go to state 77


state 46

   25 comando_composto: $@6 procedimento_ou_funcao . $@7 bloco

    $default  reduce using rule 24 ($@7)

    $@7  go to state 78


state 47

    7 var: VAR $@2 declara_vars parte_declara_vars .

    $default  reduce using rule 7 (var)


state 48

   11 declara_vars: declara_vars declara_var .

    $default  reduce using rule 11 (declara_vars)


state 49

   15 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   19 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      shift, and go to state 50
    DOIS_PONTOS  shift, and go to state 79


state 50

   19 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  shift, and go to state 80


state 51

    9 var: ROTULO $@3 lista_id_var PONTO_E_VIRGULA . parte_declara_vars

    VAR     shift, and go to state 14
    ROTULO  shift, and go to state 15

    $default  reduce using rule 10 (var)

    parte_declara_vars  go to state 81
    var                 go to state 18


state 52

   69 atrib_proc_func_rotu: IDENT $@15 . atrib_proc_func_rotu_2

    DOIS_PONTOS  shift, and go to state 82
    ATRIBUICAO   shift, and go to state 83

    $default  reduce using rule 72 ($@16)

    atrib_proc_func_rotu_2  go to state 84
    $@16                    go to state 85
    rotulo_para_goto        go to state 86
    atribuicao              go to state 87


state 53

   79 repeticao: ENQUANTO $@19 . repeticao_2

    ABRE_PARENTESES  shift, and go to state 88
    IDENT            shift, and go to state 55
    NUMERO           shift, and go to state 56
    NAO              shift, and go to state 57

    repeticao_2               go to state 89
    expressao_booleana_geral  go to state 90
    expressao_booleana        go to state 60
    expressao_fator2          go to state 61


state 54

   89 condicao_se_entao: ABRE_PARENTESES . expressao_booleana_geral FECHA_PARENTESES ENTAO $@22 condicao_se_entao_2
  128 expressao_fator2: ABRE_PARENTESES . expressao_booleana_geral FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 91
    IDENT            shift, and go to state 55
    NUMERO           shift, and go to state 56
    NAO              shift, and go to state 57

    expressao_booleana_geral  go to state 92
    expressao_booleana        go to state 60
    expressao_fator2          go to state 61


state 55

  126 expressao_fator2: IDENT .

    $default  reduce using rule 126 (expressao_fator2)


state 56

  127 expressao_fator2: NUMERO .

    $default  reduce using rule 127 (expressao_fator2)


state 57

  115 expressao_booleana_geral: NAO . expressao_booleana

    ABRE_PARENTESES  shift, and go to state 91
    IDENT            shift, and go to state 55
    NUMERO           shift, and go to state 56

    expressao_booleana  go to state 93
    expressao_fator2    go to state 61


state 58

   86 condicao: SE condicao_se_entao .
   87         | SE condicao_se_entao . condicao_senao

    SENAO  shift, and go to state 94

    PONTO_E_VIRGULA  reduce using rule 86 (condicao)
    PONTO_E_VIRGULA  [reduce using rule 96 (condicao_senao)]
    SENAO            [reduce using rule 86 (condicao)]
    $default         reduce using rule 86 (condicao)

    condicao_senao  go to state 95


state 59

   91 condicao_se_entao: expressao_booleana_geral . ENTAO $@23 condicao_se_entao_2

    ENTAO  shift, and go to state 96


state 60

  114 expressao_booleana_geral: expressao_booleana .
  116 expressao_booleana: expressao_booleana . IGUAL expressao_fator2
  117                   | expressao_booleana . DIFERENTE expressao_fator2
  118                   | expressao_booleana . MAIOR expressao_fator2
  119                   | expressao_booleana . MAIOR IGUAL expressao_fator2
  120                   | expressao_booleana . MENOR expressao_fator2
  121                   | expressao_booleana . MENOR IGUAL expressao_fator2
  122                   | expressao_booleana . E expressao_fator2
  123                   | expressao_booleana . OU expressao_fator2
  124                   | expressao_booleana . E NAO expressao_fator2

    IGUAL      shift, and go to state 97
    DIFERENTE  shift, and go to state 98
    MAIOR      shift, and go to state 99
    MENOR      shift, and go to state 100
    E          shift, and go to state 101
    OU         shift, and go to state 102

    $default  reduce using rule 114 (expressao_booleana_geral)


state 61

  125 expressao_booleana: expressao_fator2 .

    $default  reduce using rule 125 (expressao_booleana)


state 62

  133 passagem: ABRE_PARENTESES . $@27 lista_id_var_parametro FECHA_PARENTESES $@28 var_chama_proc_func_2

    $default  reduce using rule 131 ($@27)

    $@27  go to state 103


state 63

   99 leitura: LEITURA IDENT .

    $default  reduce using rule 99 (leitura)


state 64

  100 leitura: LEITURA passagem .

    $default  reduce using rule 100 (leitura)


state 65

  134 passagem: var_chama_proc_func_2 .

    $default  reduce using rule 134 (passagem)


state 66

  101 impressao: IMPRESSAO IDENT .

    $default  reduce using rule 101 (impressao)


state 67

  102 impressao: IMPRESSAO passagem .

    $default  reduce using rule 102 (impressao)


state 68

  103 goto: VAI_PARA IDENT .

    $default  reduce using rule 103 (goto)


state 69

   48 comando_composto_2: T_BEGIN comandos T_END .

    $default  reduce using rule 48 (comando_composto_2)


state 70

   49 comandos: atrib_proc_func_rotu PONTO_E_VIRGULA . comandos
   55         | atrib_proc_func_rotu PONTO_E_VIRGULA .

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    T_END     reduce using rule 55 (comandos)
    T_END     [reduce using rule 61 (comandos)]
    $default  reduce using rule 55 (comandos)

    comandos              go to state 104
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 71

   50 comandos: repeticao PONTO_E_VIRGULA . comandos
   56         | repeticao PONTO_E_VIRGULA .

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    T_END     reduce using rule 56 (comandos)
    T_END     [reduce using rule 61 (comandos)]
    $default  reduce using rule 56 (comandos)

    comandos              go to state 105
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 72

   51 comandos: condicao PONTO_E_VIRGULA . comandos
   57         | condicao PONTO_E_VIRGULA .

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    T_END     reduce using rule 57 (comandos)
    T_END     [reduce using rule 61 (comandos)]
    $default  reduce using rule 57 (comandos)

    comandos              go to state 106
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 73

   52 comandos: leitura PONTO_E_VIRGULA . comandos
   58         | leitura PONTO_E_VIRGULA .

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    T_END     reduce using rule 58 (comandos)
    T_END     [reduce using rule 61 (comandos)]
    $default  reduce using rule 58 (comandos)

    comandos              go to state 107
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 74

   53 comandos: impressao PONTO_E_VIRGULA . comandos
   59         | impressao PONTO_E_VIRGULA .

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    T_END     reduce using rule 59 (comandos)
    T_END     [reduce using rule 61 (comandos)]
    $default  reduce using rule 59 (comandos)

    comandos              go to state 108
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 75

   54 comandos: goto PONTO_E_VIRGULA . comandos
   60         | goto PONTO_E_VIRGULA .

    IDENT      shift, and go to state 31
    ENQUANTO   shift, and go to state 32
    SE         shift, and go to state 33
    LEITURA    shift, and go to state 34
    IMPRESSAO  shift, and go to state 35
    VAI_PARA   shift, and go to state 36

    T_END     reduce using rule 60 (comandos)
    T_END     [reduce using rule 61 (comandos)]
    $default  reduce using rule 60 (comandos)

    comandos              go to state 109
    atrib_proc_func_rotu  go to state 38
    repeticao             go to state 39
    condicao              go to state 40
    leitura               go to state 41
    impressao             go to state 42
    goto                  go to state 43


state 76

   28 procedimento_ou_funcao: PROCEDIMENTO IDENT . $@8 procedimento_ou_funcao_2 PONTO_E_VIRGULA procedimento_ou_funcao_3

    $default  reduce using rule 27 ($@8)

    $@8  go to state 110


state 77

   30 procedimento_ou_funcao: FUNCAO IDENT . $@9 procedimento_ou_funcao_2 DOIS_PONTOS tipo_retorno_func PONTO_E_VIRGULA procedimento_ou_funcao_3

    $default  reduce using rule 29 ($@9)

    $@9  go to state 111


state 78

   25 comando_composto: $@6 procedimento_ou_funcao $@7 . bloco

    VAR     shift, and go to state 14
    ROTULO  shift, and go to state 15

    $default  reduce using rule 10 (var)

    bloco               go to state 112
    parte_declara_vars  go to state 17
    var                 go to state 18


state 79

   15 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 113

    tipo  go to state 114


state 80

   19 lista_id_var: lista_id_var VIRGULA IDENT .

    $default  reduce using rule 19 (lista_id_var)


state 81

    9 var: ROTULO $@3 lista_id_var PONTO_E_VIRGULA parte_declara_vars .

    $default  reduce using rule 9 (var)


state 82
